# fizmo-ncursesw

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  README.txt  config-conds.m4  config-flags.m4  config-libs.m4  config-subst-libsndifsdl2.m4  config-subst.m4  config.default.mk  config.macports.mk  configure  configure.ac
debian/: changelog  control  copyright  fizmo-ncursesw-launcher  fizmo-ncursesw-launcher.6  fizmo-ncursesw.install  fizmo-ncursesw.postinst  fizmo-ncursesw.prerm  watch
debian/.debhelper/fizmo-console/: dbgsym-build-ids
debian/.debhelper/fizmo-console/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/fizmo-console/dbgsym-root/usr/share/doc/: fizmo-console-dbgsym
doc/: changelog.xml  create-mds.sh  create-txts.sh  readme.xml
src/fizmo-ncursesw/: Makefile  Makefile.am  Makefile.in  fizmo-ncursesw.c
src/locales/: CMakeLists.txt  Makefile  de_DE.txt  fizmo_ncursesw_locales.c  fizmo_ncursesw_locales.h  fr_FR.txt  locale_setup.c
src/locales/de_DE/: fizmo_ncursesw_i18n.txt
src/locales/en_GB/: fizmo_ncursesw_i18n.txt
src/locales/en_US/: fizmo_ncursesw_i18n.txt
src/locales/fr_FR/: fizmo_ncursesw_i18n.txt
src/man/: fizmo-ncursesw.6  fizmo.6
